[project]
name = "totnet"
version = "1.0.0"
description = "TotNet: Multi-Tenant VPN Commerce Platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "black>=26.5.1",
    "django>=6.0.6",
    "djangorestframework>=3.15.2",
    "isort>=8.0.1",
    "ruff>=0.15.16",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "python-decouple>=3.8",
    "django-cors-headers>=4.3.0",
    "django-extensions>=3.2.0",
    "qrcode>=7.4.0",
    "protobuf>=4.24.0",
    "grpcio>=1.59.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "uvicorn>=0.24.0",
    "gunicorn>=21.2.0",
]
